Fix splashpage links not covering full area

--- a/app/assets/stylesheets/splashpage.scss
+++ b/app/assets/stylesheets/splashpage.scss
@@ -15,20 +15,25 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: stretch;
     color: white;
     li {
-      width: 25%;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
+      height: 100%;
+      flex-grow: 1;
+      -webkit-transition: all 0.2s ease-in;
+      -moz-transition: all 0.2s ease-in;
+      transition: all 0.2s ease-in;
       &:hover {
-        background-color: #ccc;
+        flex-grow: 1.1;
+        background-color: whitesmoke;
         color: black;
-        cursor: pointer;
       }
       a {
+        height: 100%;
         text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
       }
     }
   }
